--- a/src/app/components/prod-destacado/prod-destacado.component.html
+++ b/src/app/components/prod-destacado/prod-destacado.component.html
@@ -56,7 +56,7 @@
             <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
                 <a class="product-item" href="https://wa.me/595993645127" target="_blank">
                     <img src="assets/images/suitex/remerapolo2.jpg" class="img-fluid product-thumbnail" width="260">
-                    <h3 class="product-title">Camisa moderna Masculina</h3>
+                    <h3 class="product-title">Remera tipo polo</h3>
                     <!--strong class="product-price">Gs 100.000</strong-->
                     -Pique Vicuña
                     <br />
